--- a/shop-leanser.html
+++ b/shop-leanser.html
@@ -132,14 +132,21 @@ https://templatemo.com/tm-559-zay-shop
         <div class="row">
           <div class="col-md-5 mr-auto">
             <div class="border text-center">
-              <img class="img-fluid" src="./assets/img/sa.png" alt=""></a>
+              <img class="img-fluid" src="./assets/img/1.jpg" alt=""></a>
             </div>
           </div>
           <div class="col-md-6">
-            <h2 class="text-black">Ibuprofen Tablets, 200mg</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur, vitae, explicabo? Incidunt facere, natus
-              soluta dolores iusto! Molestiae expedita veritatis nesciunt doloremque sint asperiores fuga voluptas,
-              distinctio, aperiam, ratione dolore.</p>
+            <h2 class="text-black">Avène - Cleanance Micellar Water 400 ml</h2>
+            <p>پاککەرەوەی کاریگەر بۆ دەم و چاو بەبێ سابوون و کحول. لۆشنێکی دۆستی پێست لەگەڵ ڕێکخستنی دەردانی چەوری. بە نەرمی پیسی لادەبات،مکیاجیش لادەبات. 
+            </p>
+
+             <p>
+‎شێوازی بەکارهێنان:
+           </p>
+           <p>
+‎بەیانیان و ئێواران بەکاردێت
+‎بە بەکارهێنانی پاد.
+            </p>
 
           
 
