--- a/10b.html
+++ b/10b.html
@@ -118,21 +118,24 @@ https://templatemo.com/tm-559-zay-shop
         <div class="row">
           <div class="col-md-5 mr-auto">
             <div class="border text-center">
-              <img class="img-fluid" src="./assets/img/2.jpg" alt=""></a>
+              <img class="img-fluid" src="./assets/img/10b.webp" alt=""></a>
             </div>
           </div>
           <div class="col-md-6">
-            <h2 class="text-black">Avene Cleanance Cleansing Gel 200ml</h2>
-            <p>پپاککەرەوەی جێڵە، خاوێنکەرەوەیەکی نەرمە کە بە تایبەتی بۆ چاودێریکردنی ڕۆژانەی پێستێکی چەور بەکاردێت. ئەم جێلە یارمەتی شێدارکردن و ئارامکردنەوەی پێست دەدات. بە شێوەیەکی بەرچاو کەمکردنەوەی بەرهەمهێنانی چەوری، درەوشانەوەی پێست، دەرکەوتنی کەموکوڕییەکانیش سنووردار دەکات. بۆیە، بە هاوکێشەیەکی بێهاوتا، دەتوانێت پێست پاک بکاتەوە ، نەک تەنها لابردنی پیسیەکان، بەڵکو یارمەتی ڕێکخستنی بەرهەمهێنانی چەوریش دەدات، ئەم جێلە بەکاردێت بۆ پێستی هەستیار و دەتوانێت بە نەرمی پێست پاک بکاتەوە بەبێ ئەوەی پێستەکە تووشی وشکی بکا 
-            </p>
+            <h2 class="text-black">Paulas Choice—SKIN PERFECTING 2% BHA Liquid Salicylic Acid</h2>
+            <p>
+        سیرۆمه‌ ناوازه‌كه‌ی پاولا چۆیس بۆ یه‌ك ره‌نگ كردن و ڕوونكردنه‌وه‌ی پێستی ڕوخسار و مل
+‎بچوكردنه‌وه‌ی كونیله‌ی پێست و لابردنی خانه‌ی مردووی پێست
 
-             <p>
-‎شێوازی بەکارهێنان:
-           </p>
-           <p>
-‎بەیانیان و ئێواران لەسەر پێستێکی تەڕ و مەساج کردن بۆی پاشان شوشتنی بە ئاوی شلەتێن
-
+‎بۆ هه‌موو جۆره‌ پێستێك گونجاوه‌
+‎پێستی وشك,چه‌ور,نورماڵ, تێكه‌ڵ
+‎بێ بۆنه‌ و بۆ پێستی هه‌ستیار گونجاوه
             </p>
+            <p> رۆژی یه‌ك یان دوو جار دوای ده‌موچاو شتن به‌كار دێت, پێویست ناكات بشۆردرێت 
+‎ده‌توانی ڕۆتینی تایبه‌ت به‌ پێستی خۆت له‌دوایه‌وه‌ به‌كاربهێنت
+            </p>
+               
+
 
           
 
