--- a/1c.html
+++ b/1c.html
@@ -118,21 +118,26 @@ https://templatemo.com/tm-559-zay-shop
         <div class="row">
           <div class="col-md-5 mr-auto">
             <div class="border text-center">
-              <img class="img-fluid" src="./assets/img/2.jpg" alt=""></a>
+              <img class="img-fluid" src="./assets/img/1c.jpg" alt=""></a>
             </div>
           </div>
           <div class="col-md-6">
-            <h2 class="text-black">Avene Cleanance Cleansing Gel 200ml</h2>
-            <p>پپاککەرەوەی جێڵە، خاوێنکەرەوەیەکی نەرمە کە بە تایبەتی بۆ چاودێریکردنی ڕۆژانەی پێستێکی چەور بەکاردێت. ئەم جێلە یارمەتی شێدارکردن و ئارامکردنەوەی پێست دەدات. بە شێوەیەکی بەرچاو کەمکردنەوەی بەرهەمهێنانی چەوری، درەوشانەوەی پێست، دەرکەوتنی کەموکوڕییەکانیش سنووردار دەکات. بۆیە، بە هاوکێشەیەکی بێهاوتا، دەتوانێت پێست پاک بکاتەوە ، نەک تەنها لابردنی پیسیەکان، بەڵکو یارمەتی ڕێکخستنی بەرهەمهێنانی چەوریش دەدات، ئەم جێلە بەکاردێت بۆ پێستی هەستیار و دەتوانێت بە نەرمی پێست پاک بکاتەوە بەبێ ئەوەی پێستەکە تووشی وشکی بکا 
-            </p>
+            <h2 class="text-black">The ordinary glycolic acid %7 toning solution</h2>
+            <p>
+        ‎پوختەکراوە بە ترشی گلایکۆل ئەسید کە کارپێکەرە بۆ زیندوو بونەوەی خانە سەرەتاییەکانی چینی دەرەوەی پێست کە پێست لە چینە مردووەکان پاک ئەکاتەوە و چاره‌سه‌ری زۆرێك له‌ كێشه‌كانی پێست ده‌كات
 
-             <p>
-‎شێوازی بەکارهێنان:
-           </p>
-           <p>
-‎بەیانیان و ئێواران لەسەر پێستێکی تەڕ و مەساج کردن بۆی پاشان شوشتنی بە ئاوی شلەتێن
+‎1-کونیلەکانی پێست پاک و بچوک ئەکاتەوە.
+‎2-پێست تەقشیر ئەکەن وە پێست یەک رەنگ ئەکاتەوە رێژەی تەقشیرەکەی 7% کە زۆۆر بە نەرمی پێست تەقشیر ئەکات پێست نەرم و روون ئەکاتەوە دوورەنگی و پەلەی سەر پێست ناھێلێت.
+‎3-بە سودە بۆ روونکردنەوەی پێست و ئارام کردنەوەی.
+‎4-پێکھاتەی ئالۆڤێرای تێدایە کە ھاوکاری ساف بوونی پێست و رۆشن بونەوەی دەدات و بە سودە بۆ روونکردنەوەی پێست و ئارام کردنەوەی.
+‎5-ھیلاکی روخسار ناھێلێت و لە قوڵاییەوە کار لەسەر خاوێن کردنەوەی روخسار دەکات.
+‎6-یارمەتیدەرە بۆ لابردنی زیپکە و ئاسەواری 
+‎زیپکە. 
 
+‎خاڵییە لە بۆن و ئەلکھۆل و چەوری و ماددە زیانبەخشەکان.
+‎بۆ ده‌م وچاو, بێخی سه‌ر, ده‌ست و قۆڵ و قاچ به‌كاردێ
             </p>
+           
 
           
 
