--- a/8a.html
+++ b/8a.html
@@ -118,21 +118,23 @@ https://templatemo.com/tm-559-zay-shop
         <div class="row">
           <div class="col-md-5 mr-auto">
             <div class="border text-center">
-              <img class="img-fluid" src="./assets/img/2.jpg" alt=""></a>
+              <img class="img-fluid" src="./assets/img/8a.jpg" alt=""></a>
             </div>
           </div>
           <div class="col-md-6">
-            <h2 class="text-black">Avene Cleanance Cleansing Gel 200ml</h2>
-            <p>پپاککەرەوەی جێڵە، خاوێنکەرەوەیەکی نەرمە کە بە تایبەتی بۆ چاودێریکردنی ڕۆژانەی پێستێکی چەور بەکاردێت. ئەم جێلە یارمەتی شێدارکردن و ئارامکردنەوەی پێست دەدات. بە شێوەیەکی بەرچاو کەمکردنەوەی بەرهەمهێنانی چەوری، درەوشانەوەی پێست، دەرکەوتنی کەموکوڕییەکانیش سنووردار دەکات. بۆیە، بە هاوکێشەیەکی بێهاوتا، دەتوانێت پێست پاک بکاتەوە ، نەک تەنها لابردنی پیسیەکان، بەڵکو یارمەتی ڕێکخستنی بەرهەمهێنانی چەوریش دەدات، ئەم جێلە بەکاردێت بۆ پێستی هەستیار و دەتوانێت بە نەرمی پێست پاک بکاتەوە بەبێ ئەوەی پێستەکە تووشی وشکی بکا 
+            <h2 class="text-black">Vichy Minéral 89 Fortifying and Replumping Daily Booster (50ml)</h2>
+            <p>
+        بەکاردێت بۆ شێدارکرنەوە و نەرمکردنەوەی هەموو جۆرە پێستێک
+و دوای ماوەیەک بەکارهێنان دەمووچاو جوانتر دەرئەکەوێت و ڕومەت و پێست بەگشتی زیندوو ئەکاتەوە ، بۆ پێستی دەموچاو و مل بەکاردێت ، 
+١٥ کانزای تیایە کە لە ئاوی بورکانی دەرهێنراوە و پێست ئەپارێزێت لە وشکبوونەوە و چرچبوون و تیشکی خۆر ،
+ڕەنگی پێست جوان ئەکات و یەک ڕەنگی ئەکاتەوە ، خۆراکی تەواو بۆ‌ پێست دابین ئەکات و تەندروستی بۆ ئەگەڕێنێتەوە بەتایبەت بۆ پێستی هیلاک ، 
+ڕۆژانە ۲ قەترە ئەدرێت لە پێست و مەساج ئەکرێت..بۆ خانمان و پیاوان 
+بۆ ماوەی ۲٤ کاتژمێر پێست بە شێداری و جوانی ئەهێڵێتەوە ، ڕۆژ دوای ڕۆژ زیاتر ڕەنگی پێست گەشتر و درەوشاوەتەر ئەکات و کاریگەری زیاتر دەرئەکەوێت 
+نایابترین بەرهەمە بۆ خزمەتکردنی پێست و ڕێگرتن لە بەتەمەنداچوونی پێست
+گونجاوە بۆهەموو جۆرە پێستێک.
             </p>
+              
 
-             <p>
-‎شێوازی بەکارهێنان:
-           </p>
-           <p>
-‎بەیانیان و ئێواران لەسەر پێستێکی تەڕ و مەساج کردن بۆی پاشان شوشتنی بە ئاوی شلەتێن
-
-            </p>
 
           
 
