--- a/9b.html
+++ b/9b.html
@@ -118,21 +118,27 @@ https://templatemo.com/tm-559-zay-shop
         <div class="row">
           <div class="col-md-5 mr-auto">
             <div class="border text-center">
-              <img class="img-fluid" src="./assets/img/2.jpg" alt=""></a>
+              <img class="img-fluid" src="./assets/img/10b.webp" alt=""></a>
             </div>
           </div>
           <div class="col-md-6">
-            <h2 class="text-black">Avene Cleanance Cleansing Gel 200ml</h2>
-            <p>پپاککەرەوەی جێڵە، خاوێنکەرەوەیەکی نەرمە کە بە تایبەتی بۆ چاودێریکردنی ڕۆژانەی پێستێکی چەور بەکاردێت. ئەم جێلە یارمەتی شێدارکردن و ئارامکردنەوەی پێست دەدات. بە شێوەیەکی بەرچاو کەمکردنەوەی بەرهەمهێنانی چەوری، درەوشانەوەی پێست، دەرکەوتنی کەموکوڕییەکانیش سنووردار دەکات. بۆیە، بە هاوکێشەیەکی بێهاوتا، دەتوانێت پێست پاک بکاتەوە ، نەک تەنها لابردنی پیسیەکان، بەڵکو یارمەتی ڕێکخستنی بەرهەمهێنانی چەوریش دەدات، ئەم جێلە بەکاردێت بۆ پێستی هەستیار و دەتوانێت بە نەرمی پێست پاک بکاتەوە بەبێ ئەوەی پێستەکە تووشی وشکی بکا 
-            </p>
+            <h2 class="text-black">Laroshe Posay serum pigment</h2>
+            <p>
+        سیڕەمی تایبەت بە لابردنی پەڵەی سەر
+‎پێست
+‎دەوڵەمەندە بە چەند ماددەیەکی چالاک کە پەڵەکانی سەر پێست لادەبات و پێست لە ماددە زیانبەخشەکان پاک دەکاتەوە هەرەها وا لە پێست دەکات ڕۆشنتر و تەندروستر دەربکەوێت.
+‎-بۆ ئە کەسانە گونجاوە کە پێستیان مات و ماندوویە.
+‎-وا لە پێست دەکات بە توندوتۆڵی بمێنێتەوە.
+‎-بە شێوازێکی پێشکەوتوو خانەکانی سەرەوەی پێست لادەبات و بە خانەی نوێ جێگەیان پڕدەکاتەوە.
+‎-پێست بە شێداری دەهێڵێتەوە.
 
-             <p>
-‎شێوازی بەکارهێنان:
-           </p>
-           <p>
-‎بەیانیان و ئێواران لەسەر پێستێکی تەڕ و مەساج کردن بۆی پاشان شوشتنی بە ئاوی شلەتێن
-
+‎شێوازی بەکارهێنان...
+‎-دوای پاکردنەوە و وشکردنەوەی پێست بەیانیان یان ئێواران ئەم سیڕەمە دەدەیت لە پێستی دەموچاو و ملت.
+‎-ڕۆژانە پێش چوونە بەر خۆر پێویستە دژە خۆرێکی گونجاو بەکاربهێنە.
+‎تێبینی/ئەم سیڕەمە بۆ ژێر چاو بەکار نایەت.
             </p>
+               
+
 
           
 
