--- a/shop.html
+++ b/shop.html
@@ -109,13 +109,11 @@ https://templatemo.com/tm-559-zay-shop
                         </a>
                         <ul class="collapse show list-unstyled pl-3">
                             <li><a class="nav-link" href="shop-single.html">Cleanser</a></li>
-                            <li><a class="text-decoration-none" href="#">Moisturizer</a></li>
-                            <li><a class="text-decoration-none" href="#">Serum & Oil</a></li>
-                            <li><a class="text-decoration-none" href="#">Toner</a></li>
-                            <li><a class="text-decoration-none" href="#">Lip</a></li>
-                            <li><a class="text-decoration-none" href="#">Eye</a></li>
-                            <li><a class="text-decoration-none" href="#">Treatment</a></li>
-                            <li><a class="text-decoration-none" href="#">Mask</a></li>
+                            <li><a class="nav-link" href="moisturizer.html">Moisturizer</a></li>
+                            <li><a class="nav-link" href="serum.html">Serum</a></li>
+                            <li><a class="nav-link" href="toner.html">Toner</a></li>
+                            <li><a class="nav-link" href="eye.html">Eye</a></li>
+                            <li><a class="nav-link" href="treatment.html">Treatment</a></li>
                         </ul>
                     </li>
                     <li class="pb-3">
@@ -124,10 +122,7 @@ https://templatemo.com/tm-559-zay-shop
                             <i class="fa fa-fw fa-chevron-circle-down mt-1"></i>
                         </a>
                         <ul class="collapse show list-unstyled pl-3">
-                            <li><a class="text-decoration-none" href="#">Vitamins</a></li>
-                            <li><a class="text-decoration-none" href="#">Minerals</a></li>
-                            <li><a class="text-decoration-none" href="#">Hair,Skin,Nails</a></li>
-                            <li><a class="text-decoration-none" href="#">Lozengs & Chewing Gums</a></li>
+                            <li><a class="text-decoration-none" href="#">Vitamins & Minerals</a></li>
                         </ul>
                     </li>
                     <li class="pb-3">
@@ -136,8 +131,6 @@ https://templatemo.com/tm-559-zay-shop
                             <i class="pull-right fa fa-fw fa-chevron-circle-down mt-1"></i>
                         </a>
                         <ul id="collapseThree" class="collapse list-unstyled pl-3">
-                            <li><a class="text-decoration-none" href="#">Tooth brushes</a></li>
-                            <li><a class="text-decoration-none" href="#">Dental floss</a></li>
                             <li><a class="text-decoration-none" href="#">Mouth washes</a></li>
                             <li><a class="text-decoration-none" href="#">Tooth pastes</a></li>
                             </ul>
