--- a/29.html
+++ b/29.html
@@ -118,21 +118,28 @@ https://templatemo.com/tm-559-zay-shop
         <div class="row">
           <div class="col-md-5 mr-auto">
             <div class="border text-center">
-              <img class="img-fluid" src="./assets/img/2.jpg" alt=""></a>
+              <img class="img-fluid" src="./assets/img/29.jpg" alt=""></a>
             </div>
           </div>
           <div class="col-md-6">
-            <h2 class="text-black">Avene Cleanance Cleansing Gel 200ml</h2>
-            <p>پپاککەرەوەی جێڵە، خاوێنکەرەوەیەکی نەرمە کە بە تایبەتی بۆ چاودێریکردنی ڕۆژانەی پێستێکی چەور بەکاردێت. ئەم جێلە یارمەتی شێدارکردن و ئارامکردنەوەی پێست دەدات. بە شێوەیەکی بەرچاو کەمکردنەوەی بەرهەمهێنانی چەوری، درەوشانەوەی پێست، دەرکەوتنی کەموکوڕییەکانیش سنووردار دەکات. بۆیە، بە هاوکێشەیەکی بێهاوتا، دەتوانێت پێست پاک بکاتەوە ، نەک تەنها لابردنی پیسیەکان، بەڵکو یارمەتی ڕێکخستنی بەرهەمهێنانی چەوریش دەدات، ئەم جێلە بەکاردێت بۆ پێستی هەستیار و دەتوانێت بە نەرمی پێست پاک بکاتەوە بەبێ ئەوەی پێستەکە تووشی وشکی بکا 
+            <h2 class="text-black">Vichy Normaderm Phytosolution Intense Purifying Gel (200ml)(400ml)</h2>
+            <p>
+        جێلێکی خاوێنکەرەوەیە بۆ پێستە چەورەکان، کانزای دەوڵەمەند و دەوڵەمەند بە پرۆبایۆتیک کە بە تەواوی پیسیەکان و چەوری لادەبات
+‎ئەم جێلە لە ۳ پێکهاتەی چالاکی بەهێزی دژە لەنکی دروست کراوە
+‎زینک: دژە بەکتریا و دژە هەوکردن
+‎مس: ڕێکخستنی چەوری دەکات
+‎پڕۆبایۆتیکەکان :بەربەستی پێست بەهێز دەکەن. گونجاوە بۆ پێستە هەستیارەکان.
             </p>
-
              <p>
-‎شێوازی بەکارهێنان:
-           </p>
-           <p>
-‎بەیانیان و ئێواران لەسەر پێستێکی تەڕ و مەساج کردن بۆی پاشان شوشتنی بە ئاوی شلەتێن
+            ‎بەکارهێنان:
+            </p> 
+            <p>
+        
+‎
+‎لەسەر پێستێکی شێدار بەکاربهێنە، پاشان بشۆ.
+‎خۆت بەدوور بگرە لە بەرکەوتنی چاوەکان.
+            </p>   
 
-            </p>
 
           
 
