--- a/2c.html
+++ b/2c.html
@@ -118,21 +118,18 @@ https://templatemo.com/tm-559-zay-shop
         <div class="row">
           <div class="col-md-5 mr-auto">
             <div class="border text-center">
-              <img class="img-fluid" src="./assets/img/2.jpg" alt=""></a>
+              <img class="img-fluid" src="./assets/img/1b.jpg" alt=""></a>
             </div>
           </div>
           <div class="col-md-6">
-            <h2 class="text-black">Avene Cleanance Cleansing Gel 200ml</h2>
-            <p>پپاککەرەوەی جێڵە، خاوێنکەرەوەیەکی نەرمە کە بە تایبەتی بۆ چاودێریکردنی ڕۆژانەی پێستێکی چەور بەکاردێت. ئەم جێلە یارمەتی شێدارکردن و ئارامکردنەوەی پێست دەدات. بە شێوەیەکی بەرچاو کەمکردنەوەی بەرهەمهێنانی چەوری، درەوشانەوەی پێست، دەرکەوتنی کەموکوڕییەکانیش سنووردار دەکات. بۆیە، بە هاوکێشەیەکی بێهاوتا، دەتوانێت پێست پاک بکاتەوە ، نەک تەنها لابردنی پیسیەکان، بەڵکو یارمەتی ڕێکخستنی بەرهەمهێنانی چەوریش دەدات، ئەم جێلە بەکاردێت بۆ پێستی هەستیار و دەتوانێت بە نەرمی پێست پاک بکاتەوە بەبێ ئەوەی پێستەکە تووشی وشکی بکا 
+            <h2 class="text-black">Eucerin BLEMISH-PRONE SKIN</h2>
+            <p>
+        ‎باشترین تۆنەری پاککردنەوەی ڕوخسار بۆ ئەو کەسانەی کە پێستیان چەورە و گرفتاری زیبکە و پەڵەی سەر پێست
+‎يەم بەرھەمە بەشێوەیەکی زۆر باش کاریگەری ھەیە بۆ کۆتایی ھێنان بە زیبکە و چەوری سەر پێست و ژێر پێست جگە لەوەش چارەسەری ئەو پەڵانە دەکات لە دەرئەنجامی زیبکە دروست بوون
+‎يەمە جگە لەوەی کونیلەکانی پێست زۆر بە قوڵی لە ئاسەواری مکیاج و پیسی و چەوریە زیان بەخشەکان پاکدەکاتەوە
+‎ئەوەی زۆر تایبەتە لەم بەرھەمەدا تێستی پزیشکی بۆ کراوە لەسەر پێستی ھەستیار و زۆر گونجاوە بۆ ئەو کەسانەی ھەستیاری و سوربوونەوەیان ھەیە.
             </p>
-
-             <p>
-‎شێوازی بەکارهێنان:
-           </p>
-           <p>
-‎بەیانیان و ئێواران لەسەر پێستێکی تەڕ و مەساج کردن بۆی پاشان شوشتنی بە ئاوی شلەتێن
-
-            </p>
+           
 
           
 
