--- a/7b.html
+++ b/7b.html
@@ -118,21 +118,24 @@ https://templatemo.com/tm-559-zay-shop
         <div class="row">
           <div class="col-md-5 mr-auto">
             <div class="border text-center">
-              <img class="img-fluid" src="./assets/img/2.jpg" alt=""></a>
+              <img class="img-fluid" src="./assets/img/7b.jpg" alt=""></a>
             </div>
           </div>
           <div class="col-md-6">
-            <h2 class="text-black">Avene Cleanance Cleansing Gel 200ml</h2>
-            <p>پپاککەرەوەی جێڵە، خاوێنکەرەوەیەکی نەرمە کە بە تایبەتی بۆ چاودێریکردنی ڕۆژانەی پێستێکی چەور بەکاردێت. ئەم جێلە یارمەتی شێدارکردن و ئارامکردنەوەی پێست دەدات. بە شێوەیەکی بەرچاو کەمکردنەوەی بەرهەمهێنانی چەوری، درەوشانەوەی پێست، دەرکەوتنی کەموکوڕییەکانیش سنووردار دەکات. بۆیە، بە هاوکێشەیەکی بێهاوتا، دەتوانێت پێست پاک بکاتەوە ، نەک تەنها لابردنی پیسیەکان، بەڵکو یارمەتی ڕێکخستنی بەرهەمهێنانی چەوریش دەدات، ئەم جێلە بەکاردێت بۆ پێستی هەستیار و دەتوانێت بە نەرمی پێست پاک بکاتەوە بەبێ ئەوەی پێستەکە تووشی وشکی بکا 
-            </p>
+            <h2 class="text-black">ORDINARY Hyaluronic Acid 2% B5</h2>
+            <p>
+        تازەیی/ توندکردن/ هایدرەیشن/ چرچی و سوودەکانی تر
+‎هالیرۆنک ئەسەدی ئۆردینەری ، لەلایەن پزیشکە جوانکاریەکانەوە پێشنیارکراوە
+‎هایالۆرۆنیک ترشی2٪*B5
+‎سەلامەتترین بەرهەمی سەر پێست و لەسێ توێژی پێستدا تێدەپەڕێت چونکە ڕێژەی جیاوازی ترشی هایالۆرینک تێدایە.
+‎کە چینەکانی پێستی خوارتر دەکاتە ئامانج بۆ هاندانی هەڵمژینی ناوخۆیی باشتری سەرم و دەستخستنی پێستێکی پڕ و چاو و شێ و پڕکردنەوەی هێڵە جوانەکان لە دەم و چاو و ملدا.
 
-             <p>
+‎چارەسەری وشکی لە پێست ، شێداری قووڵی پێست ، تازەیی و نەرمی بۆ پێست ، زوو چارەسەری دەرکەوتنی چرچ دەکات ، ڕێگریکردن لە تیشکەکانی UV لە خۆر کە دەبێتە هۆی تێکچوونی پێست و وشکبوونی پێست ، کاردەکات بۆ چارەسەرکردنی کێشەی چەوری پێستی زیادە.
 ‎شێوازی بەکارهێنان:
-           </p>
-           <p>
-‎بەیانیان و ئێواران لەسەر پێستێکی تەڕ و مەساج کردن بۆی پاشان شوشتنی بە ئاوی شلەتێن
-
+‎دوو جار لە ڕۆژێکدا، بە یەکسانی بۆ خاوێنکردنەوەی پێست دابنێ
             </p>
+                
+
 
           
 
