--- a/moisturizer.html
+++ b/moisturizer.html
@@ -115,124 +115,48 @@ https://templatemo.com/tm-559-zay-shop
 
             <div class="row">
           <div class="col-sm-6 col-lg-4 text-center item mb-4">
-            <a href="1.html"> <img class="img-fluid" src="./assets/img/1.jpg" alt=""></a>
-            <h3 class="text-dark">Avène - Cleanance Micellar Water 400 ml</a></h3>
+            <a href="1a.html"> <img class="img-fluid" src="./assets/img/1a.jpg" alt=""></a>
+            <h3 class="text-dark">Bepanthen Cream 30g</a></h3>
           </div>
           <div class="col-sm-6 col-lg-4 text-center item mb-4">
-            <a href="2.html"> <img class="img-fluid" src="./assets/img/2.jpg" alt=""></a>
-            <h3 class="text-dark">Avene Cleanance Cleansing Gel 200ml</a></h3>
+            <a href="2a.html"> <img class="img-fluid" src="./assets/img/2a.jpg" alt=""></a>
+            <h3 class="text-dark">Bioderma Atoderm Nutritive Nourishing Cream 40ml</a></h3>
           </div>
           <div class="col-sm-6 col-lg-4 text-center item mb-4">
-            <a href="3.html"> <img class="img-fluid" src="./assets/img/3.jpg" alt=""></a>
-            <h3 class="text-dark">Babe Cleansing Gel For Oily And Acne Prone Skin - Cleansing Gel 200 MI</a></h3>
+            <a href="3a.html"> <img class="img-fluid" src="./assets/img/3a.jpg" alt=""></a>
+            <h3 class="text-dark">Bioderma - Sebium Hydra Ultra Moisturising Compensating Care 40ml</a></h3>
           </div>
           <div class="col-sm-6 col-lg-4 text-center item mb-4">
-            <a href="4.html"> <img class="img-fluid" src="./assets/img/4.png" alt=""></a>
-            <h3 class="text-dark">Babe Laboratorios Oil Soap 500ml/16.90 fl.oz</a></h3>
+            <a href="4a.html"> <img class="img-fluid" src="./assets/img/4a.jpg" alt=""></a>
+            <h3 class="text-dark">La Roche Posay - Hydraphase Ha Rich for dehydtared skin 50 ml</a></h3>
           </div>
           <div class="col-sm-6 col-lg-4 text-center item mb-4">
-            <a href="5.html"> <img class="img-fluid" src="./assets/img/5.jpg" alt=""></a>
-            <h3 class="text-dark">Bioderma - Sebium Gel Moussant Purifying Cleansing Foaming Gel 500 ml</a></h3>
+            <a href="5a.html"> <img class="img-fluid" src="./assets/img/5a.jpg" alt=""></a>
+            <h3 class="text-dark">Sensylia 24h Fortifying Moisturising Cream 40ml</a></h3>
           </div>
           <div class="col-sm-6 col-lg-4 text-center item mb-4">
-            <a href="6.html"> <img class="img-fluid" src="./assets/img/6.jpg" alt=""></a>
-            <h3 class="text-dark">Bioderma - Sensibio Gel Moussant 500 ml</a></h3>
+            <a href="6a.html"> <img class="img-fluid" src="./assets/img/6a.jpg" alt=""></a>
+            <h3 class="text-dark">Sensylia 24h Light Moisturising Fortifying Fluid 40ml</a></h3>
           </div>
           <div class="col-sm-6 col-lg-4 text-center item mb-4">
-            <a href="7.html"> <img class="img-fluid" src="./assets/img/7.jpg" alt=""></a>
-            <h3 class="text-dark">BIODERMA PIGMENTBIO FOAMING CREAM (200ML)</a></h3>
+            <a href="7a.html"> <img class="img-fluid" src="./assets/img/7a.jpg" alt=""></a>
+            <h3 class="text-dark">SVR Sebiaclear Hydra Anti-Mark Soothing Repairing Moisturizer (40ml)</a></h3>
           </div>
           <div class="col-sm-6 col-lg-4 text-center item mb-4">
-            <a href="8.html"> <img class="img-fluid" src="./assets/img/8.jpg" alt=""></a>
-            <h3 class="text-dark">Bioderma Sébium Purifying Cleansing Foaming Gel (200ml)</a></h3>
+            <a href="8a.html"> <img class="img-fluid" src="./assets/img/8a.jpg" alt=""></a>
+            <h3 class="text-dark">Vichy Minéral 89 Fortifying and Replumping Daily Booster (50ml)</a></h3>
           </div>
           <div class="col-sm-6 col-lg-4 text-center item mb-4">
-            <a href="9.html"> <img class="img-fluid" src="./assets/img/9.jpg" alt=""></a>
-            <h3 class="text-dark">Bioderma Sensibio Mild Cleansing Foaming Gel (200ml)</a></h3>
+            <a href="9a.html"> <img class="img-fluid" src="./assets/img/9a.jpg" alt=""></a>
+            <h3 class="text-dark">CeraVe Hydrating Acid Serum 30ml</a></h3>
           </div>
           <div class="col-sm-6 col-lg-4 text-center item mb-4">
-            <a href="10.html"> <img class="img-fluid" src="./assets/img/10.jpg" alt=""></a>
-            <h3 class="text-dark">Cerave - SA Smoothing Cleanser 236ml</a></h3>
+            <a href="10a.html"> <img class="img-fluid" src="./assets/img/10a.jpg" alt=""></a>
+            <h3 class="text-dark">Uriage Hyseac Hydra</a></h3>
           </div>
           <div class="col-sm-6 col-lg-4 text-center item mb-4">
-            <a href="11.html"> <img class="img-fluid" src="./assets/img/11.jpg" alt=""></a>
-            <h3 class="text-dark">CeraVe Foaming Cleanser (473ml) (236ml)</a></h3>
-          </div>
-          <div class="col-sm-6 col-lg-4 text-center item mb-4">
-            <a href="12.12.html"> <img class="img-fluid" src="./assets/img/12.12.jpg" alt=""></a>
-            <h3 class="text-dark">Cerave Hydrating Cleanser (473ml)(236ml)</a></h3>
-          </div>
-          <div class="col-sm-6 col-lg-4 text-center item mb-4">
-            <a href="12.html"> <img class="img-fluid" src="./assets/img/12.jpg" alt=""></a>
-            <h3 class="text-dark">Cetaphil - Lotion Nettoyante 460ml</a></h3>
-          </div>
-          <div class="col-sm-6 col-lg-4 text-center item mb-4">
-            <a href="13.html"> <img class="img-fluid" src="./assets/img/13.jpg" alt=""></a>
-            <h3 class="text-dark">Cetaphil - Gentle Exfoliating Cleanser 178g</a></h3>
-          </div>
-          <div class="col-sm-6 col-lg-4 text-center item mb-4">
-            <a href="14.html"> <img class="img-fluid" src="./assets/img/14.jpg" alt=""></a>
-            <h3 class="text-dark">Cetaphil Pro-Cleansing Face Wash for Sensitive Skin Prone to Redness - 8 oz</a></h3>
-          </div>
-          <div class="col-sm-6 col-lg-4 text-center item mb-4">
-            <a href="15.html"> <img class="img-fluid" src="./assets/img/15.jpg" alt=""></a>
-            <h3 class="text-dark">Cetaphil Gentle Skin Cleanser 236 ml</a></h3>
-         </div>
-          <div class="col-sm-6 col-lg-4 text-center item mb-4">
-            <a href="16.html"> <img class="img-fluid" src="./assets/img/16.jpg" alt=""></a>
-            <h3 class="text-dark">Eucerin - Dermato Clean Micellar Foam 150 ml</a></h3>
-          </div>
-          <div class="col-sm-6 col-lg-4 text-center item mb-4">
-            <a href="17.html"> <img class="img-fluid" src="./assets/img/17.png" alt=""></a>
-            <h3 class="text-dark">Filorga - Foam Cleanser 150 ml</a></h3>
-          </div>
-          <div class="col-sm-6 col-lg-4 text-center item mb-4">
-            <a href="18.html"> <img class="img-fluid" src="./assets/img/18.jpg" alt=""></a>
-            <h3 class="text-dark">ISIS PHARMA NEOTONE Gel (150ml)</a></h3>
-          </div>
-          <div class="col-sm-6 col-lg-4 text-center item mb-4">
-            <a href="19.html"> <img class="img-fluid" src="./assets/img/19.jpg" alt=""></a>
-            <h3 class="text-dark">ISIS PHARMA TEEN DERM Gel (150ML)</a></h3>
-          </div>
-          <div class="col-sm-6 col-lg-4 text-center item mb-4">
-            <a href="20.html"> <img class="img-fluid" src="./assets/img/20.jpg" alt=""></a>
-            <h3 class="text-dark">ISIS PHARMA TEEN DERM Gel sensitive (250ml)</a></h3>
-          </div>
-          <div class="col-sm-6 col-lg-4 text-center item mb-4">
-            <a href="21.html"> <img class="img-fluid" src="./assets/img/21.jpg" alt=""></a>
-            <h3 class="text-dark">Neutrogena Clear & Defend Wash-Mask 150 ml</a></h3>
-          </div>
-          <div class="col-sm-6 col-lg-4 text-center item mb-4">
-            <a href="22.html"> <img class="img-fluid" src="./assets/img/22.jpg" alt=""></a>
-            <h3 class="text-dark">Neutrogena Visibly Clear Fein & Matt 150ml</a></h3>
-          </div>
-          <div class="col-sm-6 col-lg-4 text-center item mb-4">
-            <a href="23.html"> <img class="img-fluid" src="./assets/img/23.jpg" alt=""></a>
-            <h3 class="text-dark">SVR Gel Lavant Topialyse Gentle Cleansing Complex + Glycerin 400ml</a></h3>
-          </div>
-          <div class="col-sm-6 col-lg-4 text-center item mb-4">
-            <a href="24.html"> <img class="img-fluid" src="./assets/img/24.jpg" alt=""></a>
-            <h3 class="text-dark">SVR Sebiaclear Foaming Gel (400ml)</a></h3>
-          </div>
-          <div class="col-sm-6 col-lg-4 text-center item mb-4">
-            <a href="25.html"> <img class="img-fluid" src="./assets/img/25.jpg" alt=""></a>
-            <h3 class="text-dark">THE ORDINARY Squalane Cleanser 50ml</a></h3>
-          </div>
-          <div class="col-sm-6 col-lg-4 text-center item mb-4">
-            <a href="26.html"> <img class="img-fluid" src="./assets/img/26.png" alt=""></a>
-            <h3 class="text-dark">URIAGE DÉPIDERM BRIGHTENING CLEANSING FOAM (100ML)</a></h3>
-          </div>
-          <div class="col-sm-6 col-lg-4 text-center item mb-4">
-            <a href="27.html"> <img class="img-fluid" src="./assets/img/27.jpg" alt=""></a>
-            <h3 class="text-dark">Uriage Hyséac Cleansing Gel (150 ml)</a></h3>
-          </div>
-          <div class="col-sm-6 col-lg-4 text-center item mb-4">
-            <a href="28.html"> <img class="img-fluid" src="./assets/img/28.jpg" alt=""></a>
-            <h3 class="text-dark">Uriage Cleansing Soothing Oil 500 ml</a></h3>
-          </div>
-          <div class="col-sm-6 col-lg-4 text-center item mb-4">
-            <a href="29.html"> <img class="img-fluid" src="./assets/img/29.jpg" alt=""></a>
-            <h3 class="text-dark">Vichy Normaderm Phytosolution Intense Purifying Gel (200ml)(400ml)</a></h3>
+            <a href="11a.html"> <img class="img-fluid" src="./assets/img/11a.jpg" alt=""></a>
+            <h3 class="text-dark">Uriage Eau Thermale Cold Cream</a></h3>
           </div>
           
 
