--- a/1e.html
+++ b/1e.html
@@ -123,9 +123,8 @@ https://templatemo.com/tm-559-zay-shop
           </div>
           <div class="col-md-6">
             <h2 class="text-black">Laroshe Posay cicaplast</h2>
-            <p>چاکردنەوە-نەرم کەرەوە-دژەخۆر-دژەپەڵە دروست بوو
-‎ن-دژە بەکتریا
-‎بۆئەو پێستانەی کە لە دوای لەیزەر کردن و تەقشیر کردن توشی برینداربون و سوتاوی ئەبن.
+            <p>
+                چاکردنەوە,  نەرم کەرەوە ,دژەخۆر ,دژەپەڵە ,دژە بەکتریا , بۆئەو پێستانەی کە لە دوای لەیزەر کردن و تەقشیر کردن توشی برینداربون و سوتاوی ئەبن.
             </p>
 
            
