--- a/1g.html
+++ b/1g.html
@@ -124,26 +124,14 @@ https://templatemo.com/tm-559-zay-shop
           <div class="col-md-6">
             <h2 class="text-black">Foltene Pharma Hair & Scalp Hair Treatment For Men 12 Vials</h2>
             <p>
-        ڤیاڵی فۆڵتین بۆ قژێکی تەندروست و چارەسەرێکی بۆ نەهێشتنی هەڵوەرینی قژی پیاوان
-‎ بە پێکهاتەیەکی چالاکی تایبەت، کە قژێکی تەندروست و زۆر و بەرگری بەهێز دەبەخشێ، لەگەڵ ئەوەشدا، هاوسەنگی دەکات لە نەبوونی خۆراکی پێویست، یارمەتی گەڕاندنەوەی بارودۆخی سروشتی پێستی سەر دەدات و
-‎کەمبونەوەی قژ رادەگرێت کە تووشبووە بە هۆی
-‎فشاری ژینگەیی ،فشاری تیشک 
-‎.پیربوونی پێشوەخت
-‎پێکهاتووە لە 
-‎: تێکەڵەیەکە لە ترشی ئەمینی و ڤیتامین (A، B5، PP، C- E) پێویستە بۆ بەرەوپێشبردنی تەندروستی قژ و
-‎پێستی سەر
+        ڤیاڵی فۆڵتین بۆ قژێکی تەندروست و چارەسەرێکی بۆ نەهێشتنی هەڵوەرینی قژی پیاوان, بە پێکهاتەیەکی چالاکی تایبەت، کە قژێکی تەندروست و زۆر و بەرگری بەهێز دەبەخشێ، لەگەڵ ئەوەشدا، هاوسەنگی دەکات لە نەبوونی, خۆراکی پێویست، یارمەتی گەڕاندنەوەی بارودۆخی سروشتی پێستی سەر دەدات و, کەمبونەوەی قژ رادەگرێت کە تووشبووە بە هۆی فشاری ژینگەیی ،فشاری تیشک , پیربوونی پێشوەخت.  پێکهاتووە لە : تێکەڵەیەک لە ترشی ئەمینی و ڤیتامین (A، B5، PP، C- E) پێویست بۆ بەرەوپێشبردنی تەندروستی قژ و پێستی سەر.
             </p>
              <p>
             ‎بەکارهێنان:
             </p> 
             <p>
         
-‎هەر یەک لە چارەسەرەکان بۆ ماوەی (1) مانگ بەکاردەهێنرێت.
-
-‎سەرەتا یەک ڤیال لە هەموو ڕۆژێکدا (بۆ هەشت هەفتە. )
-‎پاشان
-‎دوو ڤیال لە هەفتەیەکدا (بۆ شەش هەفتە)
-‎ماوەی چارەسەرەکە پشت دەبەستێت بەو ئەنجامەی کە بەدەست هاتووە. بە لایەنی کەمەوە ساڵانە دووجار دووبارە بەکاردێتەوە لە (بەهار و پایز)
+‎هەر یەک لە چارەسەرەکان بۆ ماوەی (1) مانگ بەکاردەهێنرێت. سەرەتا یەک ڤیال لە هەموو ڕۆژێکدا (بۆ هەشت هەفتە. ) پاشان دوو ڤیال لە هەفتەیەکدا (بۆ شەش هەفتە) ماوەی چارەسەرەکە پشت دەبەستێت بەو ئەنجامەی کە بەدەست هاتووە. بە لایەنی کەمەوە ساڵانە دووجار دووبارە بەکاردێتەوە 
             </p>   
 
 
