--- a/1h.html
+++ b/1h.html
@@ -124,10 +124,7 @@ https://templatemo.com/tm-559-zay-shop
           <div class="col-md-6">
             <h2 class="text-black">ia - ANTICARIES MOUTHWASH ( 500 ML )</h2>
             <p>
-        غرغرە
-‎مینای ددان بەهێز دەکات
-‎بۆنی هەناسەی دەم خۆش دەکات
-‎تامی فلۆراید دەبەخشێ
+        مینای ددان بەهێز دەکات و بۆنی هەناسەی دەم خۆش دەکات ,تامی فلۆراید دەبەخشێ
             </p>
             
 
