--- a/2g.html
+++ b/2g.html
@@ -124,21 +124,13 @@ https://templatemo.com/tm-559-zay-shop
           <div class="col-md-6">
             <h2 class="text-black">Foltene Pharma Hair & Scalp Hair Treatment For Women Value Pack (12x6ml)</h2>
             <p>
-        ڤیاڵی فۆڵتین بۆ قژێکی تەندروست و چارەسەرێکی بۆ نەهێشتنی هەڵوەرینی قژی ئافرەتان
-‎ئەم بەرهەمە کاریگەریکی گرنگی هەیە بۆ وەستاندنی هەڵوەرینی قژ و زیاکردنی چڕی قژ. دەبێتە هۆی پاراستن و نەرمکردنی قژەکە و کاریگەری دەبێت لەسەر زیادکردنی گەشەی خێرای قژ. ( سەلامەتە لەکاتی دوو گیانی و شیردان )
-‎ ڤیاڵی فۆلتین  پیکهاتووە لە:
-‎ پوختەی Tricalgoxyl: پێکهاتەیەکی چالاکە لە پوختەی قەوزەی قاوەیی کە فۆڵتین یەکەم براند بوو دۆزییەوە کە کار لەسەر هاندانی سوڕی خوێنی پێستی سەر دەکات و قۆناغی گەشەی قژ زیاد دەکات.
-‎‏Nourishing Biomineral Complex: کۆمەڵیک کانزای چالاکی تێکەڵ کراو ( iron , zinc , magnesium , potassium , calcium ) کەئەمانە سەرەکەییە بۆ گەشە و خۆراکدانی چیکڵدانۆچکەی قژ. 
-DN-Age  : ئەم پێکهاتەیە پارێزی قژ دەکات بە درێژەی رۆژەکە و دەیپارێزێ لەکاریگەری دەرکەییە زیان بەخشەکان وەک گەرمی، تیشکی خور، پیس بون، هەڵە بەکارهێنانی موجەفیفە و قژ ئتو کردن، دوبارە قژ بۆیە کردن و بەکارهینان مادەی کیمیائی زیان بەخش بەقژ.
-‎ ‏Capillia Longa : ئەم پێکهاتەیە کار لەسەر خێرا کردنی گەشەی قژ دەکات.
+        ڤیاڵی فۆڵتین بۆ قژێکی تەندروست و چارەسەرێکی بۆ نەهێشتنی هەڵوەرینی قژی ئافرەتان ئەم بەرهەمە کاریگەریکی گرنگی هەیە بۆ وەستاندنی هەڵوەرینی قژ و زیاکردنی چڕی قژ. دەبێتە هۆی پاراستن و نەرمکردنی قژەکە و کاریگەری دەبێت لەسەر زیادکردنی گەشەی خێرای قژ. ( سەلامەتە لەکاتی دوو گیانی و شیردان ), ڤیاڵی فۆلتین  پیکهاتووە لە: پوختەی Tricalgoxyl: پێکهاتەیەکی چالاکە لە پوختەی قەوزەی قاوەیی کە فۆڵتین یەکەم براند بوو دۆزییەوە کە کار لەسەر هاندانی سوڕی خوێنی پێستی سەر دەکات و قۆناغی گەشەی قژ زیاد دەکات. Nourishing Biomineral Complex: کۆمەڵیک کانزای چالاکی تێکەڵ کراو ( iron , zinc , magnesium , potassium , calcium ) کەئەمانە سەرەکەییە بۆ گەشە و خۆراکدانی چیکڵدانۆچکەی قژ.  پارێزی قژ دەکات بە درێژەی رۆژەکە و دەیپارێزێ لەکاریگەری دەرکەییە زیان بەخشەکان وەک گەرمی، تیشکی خور، پیس بون، هەڵە بەکارهێنانی موجەفیفە و قژ ئتو کردن، دوبارە قژ بۆیە کردن و بەکارهینان مادەی کیمیائی زیان بەخش بەقژ. Capillia Longa: ئەم پێکهاتەیە کار لەسەر خێرا کردنی گەشەی قژ دەکات.
             </p>
              <p>
             ‎بەکارهێنان:
             </p> 
             <p>
-         ٣ ڤیاڵ لە هەفتەیەکدا واتە ڕۆژ نا ڕۆژێک بە تەواوکردنی یەک ڤیاڵ بۆ هەرجارێک کە بەکارهات.
-‎ـ لە پێستی سەر بدرێت و مەساجی پێبکرێت.
-‎ـ دەبێت لەسەر پێستی سەر بمێنێتەوە و نەشۆردرێت. هەروەها وا باشترە بە شامپۆی فۆڵتینی بەهێزکەری قژی ئافرەتان بەکاربهێنرێت لەگەڵیدا پێش بەکارهێنانی ڤیاڵەکە. 
+        ‎ ٣ ڤیاڵ لە هەفتەیەکدا واتە ڕۆژ نا ڕۆژێک بە تەواوکردنی یەک ڤیاڵ بۆ هەرجارێک کە بەکارهات,  لە پێستی سەر بدرێت و مەساجی پێبکرێت, دەبێت لەسەر پێستی سەر بمێنێتەوە و نەشۆردرێت. هەروەها وا باشترە بە شامپۆی فۆڵتینی بەهێزکەری قژی ئافرەتان بەکاربهێنرێت لەگەڵیدا پێش بەکارهێنانی ڤیاڵەکە.
             </p>   
 
 
