--- a/2h.html
+++ b/2h.html
@@ -124,9 +124,10 @@ https://templatemo.com/tm-559-zay-shop
           <div class="col-md-6">
             <h2 class="text-black">Kin - Gingival Gums Mouthwash ( 250ml)</h2>
             <p>
-        بەکارهێنانی ڕۆژانەی دەم شوشتن یارمەتیدەرە بۆ ڕێگریکردن لە چەندین نەخۆشی باوی دەم وەک
-‎وەک کونبوونی ددان، هەوکردنی پوک،
-‎ڕێگریکردن لە زیادەڕەوی لە بەکتریا ،بۆن ناخۆشی هەناسە، باشترین ماددەی چالاکی دژە بەکتریای تێدایە
+        بەکارهێنانی ڕۆژانەی دەم شوشتن یارمەتیدەرە بۆ ڕێگریکردن لە چەندین نەخۆشی باوی دەم وەک وەک کونبوونی ددان، هەوکردنی پوک، ڕێگریکردن لە زیادەڕەوی لە بەکتریا ،بۆن ناخۆشی هەناسە، باشترین ماددەی چالاکی دژة بەکتریای تێدایە.
+    </p>
+
+    <p>
 
 ‎غەرغەرە بکە بۆ ۳٠ چرکە دووجار لە ڕۆژێکدا
             </p>
