--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ https://templatemo.com/tm-559-zay-shop
                                 <h1 class="h1 text-success"><b>Healthy Wealthy</b> .</h1>
                                 <h3 class="h2">بەرهەمە پزیشکییەکان</h3>
                                 <p>
-                                    للێرە زانیاری بەدەست بهێنە دەربارەی بەرهەمە پزیشکییەکان
+                                    لێرە زانیاری بەدەست بهێنە دەربارەی بەرهەمە پزیشکیەکان
                                 </p>
                             </div>
                         </div>
@@ -127,7 +127,7 @@ https://templatemo.com/tm-559-zay-shop
                         </div>
                         <div class="col-lg-6 mb-0 d-flex align-items-center">
                             <div class="text-align-left">
-                                <h1 class="h1">یەکەم وێبسایت</h1>
+                                <h1 class="h1">Healthy Wealthy
                                 <h3 class="h2">تایبەت بە زانیاری بەرهەمی پزیشکی</h3>
                                 <p>
                                     .
