--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <meta name="google-site-verification" content="-cp30gpAHO-E0rErLxjL-1X4rEn0wiHggGSoFdsQ0T0" />
     <title>Healthy Wealthy by Sazgar</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
